Chapter 4 and 5/fruits-api-dr-vs-gw-canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruits-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-fruits-api-gateway
        protocol: HTTP
      hosts:
        - fruits.istio-succinctly.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - fruits.istio-succinctly.io
  gateways:
    - fruits-api-gateway
  http:
    - route:
        - destination:
            host: fruits-api-service
            port:
              number: 80
            subset: v1
          weight: 10
        - destination:
            host: fruits-api-service
            port:
              number: 80
            subset: v2
          weight: 90
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fruits-api-destination
  namespace: micro-shake-factory
spec:
  host: fruits-api-service
  subsets:
    - name: v1
      labels:
        version: "1"
    - name: v2
      labels:
        version: "2"
