Chapter 4 and 5/fruits-api-dr-vs-gw-test-fault.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruits-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-fruits-api-gateway
        protocol: HTTP
      hosts:
        - fruits.istio-succinctly.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - fruits.istio-succinctly.io
  gateways:
    - fruits-api-gateway
  http:
    - match:
        - headers:
            version:
              exact: "2"
      route:
        - destination:
            host: fruits-api-service
            port:
              number: 80
            subset: v1
    - route:
        - destination:
            host: fruits-api-service
            port:
              number: 80
            subset: v1
      fault:
        delay:
          fixedDelay: 5s
          percentage:
            value: 40
        abort:
          httpStatus: 500
          percentage:
            value: 60
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fruits-api-destination
  namespace: micro-shake-factory
spec:
  host: fruits-api-service
  subsets:
    - name: v1
      labels:
        version: "1"
    - name: v2
      labels:
        version: "2"
