Chapter 4 and 5/fruits-api-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - fruits.istio-succinctly.io
  http:
    - route:
        - destination:
            host: fruits-api-service
            port:
              number: 80
