Chapter 4 and 5/juice-shop-api-dr-vs-gw-resilience.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: juice-shop-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-juice-shop-api-gateway
        protocol: HTTP
      hosts:
        - juice-shop.istio-succinctly.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: juice-shop-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - juice-shop.istio-succinctly.io
  gateways:
    - juice-shop-api-gateway
  http:
    - route:
        - destination:
            host: juice-shop-api-service
            port:
              number: 80
      timeout: 30s
      retries:
        attempts: 10
        perTryTimeout: 3s
        retryOn: "5xx,connect-failure,refused-stream"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: juice-shop-api-destination-rule
  namespace: micro-shake-factory
spec:
  host: juice-shop-api-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
